updated cargo package